[package]
name = "evmobserver"
version = "0.1.0"
authors = ["Stuart Stock <stuart@int08h.com>"]
repository = "https://github.com/int08h/evmobserver"
license = "Apache-2.0"
description = "How much does the Ethereum 'world computer' cost?"
readme = "README.md"

[dependencies]
log = "0.4"
simple_logger = "0.5"
json = "0.11"
bytesize = "0.2"
separator = "0.3"
csv = "1.0"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"



